Cat no longer makes noise or looks at player when they are sleeping. Updating character to look at and scan cards when in main games depending on who's turn it is and drawing. More biel dialogue animations added. Conversation manager change. Look at and scan card activations in main games. Zilia new animations.
New checks for making noise and looking at player when the current cat stationary animation is the sleeping ones.

Added more of biel's dialogue animations to the animation blueprint and setup their notifies.

Changed the conversation manager to not now reset the speaker's dialogue incase it is the game invitation one which should override. Also now if dialogue is active when it tries to start a conversation then it will activate the check loop again after 2 seconds.

In main games changing and turn manager updating whether NPCs will scan their cards or look at another character depending if it is their turn. In auction they will look at a random drawing character when the round is a draw.

Zilia idle and leg cross animations added and added to animation blueprint.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1596,7 +1596,7 @@ ExternalImagePicker.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.LODInfo.BuildSettings\" \"Object.LODInfo.ReductionSettings\" "
+Object="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1878,7 +1878,7 @@ BP_Cat_C="\"Object.References.Possible Points\" "
 ClothPaintTool_SmoothSettings="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
@@ -1915,6 +1915,7 @@ None=======
 None=======
 None=======
 None=======
+OpenAssetsAtExit=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC.ABP_NPC
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1930,35 +1931,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/Models/Zilia/zilia
-MRUItem1=/Game/Player/BP_Player
-MRUItem2=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem3=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
-MRUItem4=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
-MRUItem5=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3__Skeleton
-MRUItem6=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
-MRUItem7=/Game/Maps/Main_Level/Main_Level
-MRUItem8=/Game/Maps/Test_Level/ThirdPersonMap
-MRUItem9=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_63_to_player_and_Zilia
-MRUItem10=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia
-MRUItem11=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_69
-MRUItem12=/Game/Environment/Posters/Models/poster1
-MRUItem13=/Game/Environment/Custom_Props/Materials/Plants
-MRUItem14=/Game/Environment/Posters/Material/Posters
-MRUItem15=/Game/NPCs/Models/Zilia/Materials/MI_Zilia_dress
-MRUItem16=/Game/NPCs/Models/Biel/Textures/Body/Biel_Body_LP_Biel_Body_LP_UVs_lambert1SG_BaseColor
-MRUItem17=/Game/NPCs/Models/Biel/Materials/MI_Biel_Body
-MRUItem18=/Game/NPCs/Models/Biel/Materials/MI_Biel_Hair
-MRUItem19=/Game/Environment/Pictures/Textures/T_Prop_01_A
-MRUItem20=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A
-MRUItem21=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Opaque
-MRUItem22=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/Shaker_main_body
-MRUItem23=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/small_shaker_cup
-MRUItem24=/Game/NPCs/Models/Dante_V3/Dante_V3
-MRUItem25=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
-MRUItem26=/Game/NPCs/Models/Zilia/Textures/zilia_skin_BaseColor
-MRUItem27=/Game/NPCs/Models/Zilia/Materials/MI_Zilia_skin
-MRUItem28=/Game/NPCs/BP_NPC
+MRUItem0=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem1=/Game/NPCs/Models/Zilia/zilia
+MRUItem2=/Game/Player/BP_Player
+MRUItem3=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem4=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
+MRUItem5=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
+MRUItem6=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3__Skeleton
+MRUItem7=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
+MRUItem8=/Game/Maps/Main_Level/Main_Level
+MRUItem9=/Game/Maps/Test_Level/ThirdPersonMap
+MRUItem10=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_63_to_player_and_Zilia
+MRUItem11=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia
+MRUItem12=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_69
+MRUItem13=/Game/Environment/Posters/Models/poster1
+MRUItem14=/Game/Environment/Custom_Props/Materials/Plants
+MRUItem15=/Game/Environment/Posters/Material/Posters
+MRUItem16=/Game/NPCs/Models/Zilia/Materials/MI_Zilia_dress
+MRUItem17=/Game/NPCs/Models/Biel/Textures/Body/Biel_Body_LP_Biel_Body_LP_UVs_lambert1SG_BaseColor
+MRUItem18=/Game/NPCs/Models/Biel/Materials/MI_Biel_Body
+MRUItem19=/Game/NPCs/Models/Biel/Materials/MI_Biel_Hair
+MRUItem20=/Game/Environment/Pictures/Textures/T_Prop_01_A
+MRUItem21=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A
+MRUItem22=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Opaque
+MRUItem23=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/Shaker_main_body
+MRUItem24=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/small_shaker_cup
+MRUItem25=/Game/NPCs/Models/Dante_V3/Dante_V3
+MRUItem26=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
+MRUItem27=/Game/NPCs/Models/Zilia/Textures/zilia_skin_BaseColor
+MRUItem28=/Game/NPCs/Models/Zilia/Materials/MI_Zilia_skin
+MRUItem29=/Game/NPCs/BP_NPC
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3769,7 +3771,7 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
-bImportAnimations=False
+bImportAnimations=True
 bImportMaterials=True
 bImportTextures=True
 
@@ -3871,6 +3873,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/NPCs/Animations/Assets/Zilia/Other/zilia_pose_legCross.zilia_pose_legCross;
 RecentlyPlaced=/Game/NPCs/Models/Zilia/zilia.zilia;
 RecentlyPlaced=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_1_Base_Pose_Sofa_Breathe.Biel_Idle_1_Base_Pose_Sofa_Breathe;
 RecentlyPlaced=/Game/NPCs/Models/Biel/Furniture_Test/Biels_furniture.Biels_furniture;
@@ -3890,7 +3893,6 @@ RecentlyPlaced=/Game/Environment/Pictures/Models/SM_Frame_Crow.SM_Frame_Crow;/En
 RecentlyPlaced=/Game/Environment/Pictures/Models/SM_Frame_Tuna.SM_Frame_Tuna;/Engine/Transient.EditorStaticMeshFactory_0
 RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail.wrath_cocktail;
 RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/sloth_cocktail.sloth_cocktail;
-RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail.pride_cocktail;
 None=======
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
