Tuna model updated again again.
Tuna's model and associated animations and assets updated.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -411,6 +411,7 @@ CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_Var
 GroupActor=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList
 RectLight=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision
 FbxImportUI=FbxImportUI.Mesh.Thresholds
+ABP_Tuna_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 
 [ContentBrowser]
 SequenceBrowser.ThumbnailSize=2
@@ -510,7 +511,7 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main_Level/Main_Level
+LastLevel=/Game/Maps/Test_Level/ThirdPersonMap
 
 [ModuleFileTracking]
 Project_7_Sins.TimeStamp=2025.03.22-16.28.40
@@ -1890,8 +1891,12 @@ MaterialExpressionScalarParameter="\"Object\" "
 MaterialExpressionParameter="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -1900,7 +1905,6 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1917,13 +1921,9 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-OpenAssetsAtExit=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_sleeping.Tuna_sleeping
-OpenAssetsAtExit=/Game/NPCs/Models/Dante_V3/Materials/MI_Tuna.MI_Tuna
+OpenAssetsAtExit=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna.ABP_Tuna
+OpenAssetsAtExit=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat.BP_Cat
+OpenAssetsAtExit=/Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat.BP_Leading_Cat
 None=======
 None=======
 None=======
@@ -1945,23 +1945,23 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_sleeping
-MRUItem1=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_meow
-MRUItem2=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_hiss
-MRUItem3=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_lying
-MRUItem4=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_base_pose
-MRUItem5=/Game/NPCs/Models/Dante_V3/Materials/MI_Tuna
-MRUItem6=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
-MRUItem7=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
-MRUItem8=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3_
-MRUItem9=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem10=/Game/NPCs/Models/Zilia/zilia
-MRUItem11=/Game/Player/BP_Player
-MRUItem12=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem13=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
-MRUItem14=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
-MRUItem15=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3__Skeleton
-MRUItem16=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
+MRUItem0=/Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat
+MRUItem1=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
+MRUItem2=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
+MRUItem3=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__4__Skeleton
+MRUItem4=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_sleeping
+MRUItem5=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_meow
+MRUItem6=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_hiss
+MRUItem7=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_lying
+MRUItem8=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_base_pose
+MRUItem9=/Game/NPCs/Models/Dante_V3/Materials/MI_Tuna
+MRUItem10=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
+MRUItem11=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
+MRUItem12=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem13=/Game/NPCs/Models/Zilia/zilia
+MRUItem14=/Game/Player/BP_Player
+MRUItem15=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem16=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
 MRUItem17=/Game/Maps/Main_Level/Main_Level
 MRUItem18=/Game/Maps/Test_Level/ThirdPersonMap
 MRUItem19=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_63_to_player_and_Zilia
@@ -1973,8 +1973,6 @@ MRUItem24=/Game/Environment/Posters/Material/Posters
 MRUItem25=/Game/NPCs/Models/Zilia/Materials/MI_Zilia_dress
 MRUItem26=/Game/NPCs/Models/Biel/Textures/Body/Biel_Body_LP_Biel_Body_LP_UVs_lambert1SG_BaseColor
 MRUItem27=/Game/NPCs/Models/Biel/Materials/MI_Biel_Body
-MRUItem28=/Game/NPCs/Models/Biel/Materials/MI_Biel_Hair
-MRUItem29=/Game/Environment/Pictures/Textures/T_Prop_01_A
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3473,6 +3471,13 @@ MaterialExpressionScalarParameter.General=True
 MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
 MaterialExpressionScalarParameter.MaterialExpression=True
 MaterialExpressionScalarParameter.CustomPrimitiveData=True
+ABP_Tuna_C.References=True
+ABP_Tuna_C.Checks=True
+ABP_Tuna_C.Current Int=True
+ABP_Tuna_C.Look At Positions=True
+ABP_Tuna_C.States=True
+PersonaPreviewSceneDescription.Animation Blueprint=True
+BP_Leading_Cat_C.Default=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -3790,6 +3795,7 @@ StaticMeshActor.Materials=True
 StaticMeshActor.Physics=True
 StaticMeshActor.Collision=True
 StaticMeshActor.Lighting=True
+AnimBlueprint.ClassOptions=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3907,6 +3913,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__4_.tuna_export_UE__4_;
 RecentlyPlaced=/Game/NPCs/Animations/Assets/Zilia/Other/zilia_pose_legCross.zilia_pose_legCross;
 RecentlyPlaced=/Game/NPCs/Models/Zilia/zilia.zilia;
 RecentlyPlaced=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_1_Base_Pose_Sofa_Breathe.Biel_Idle_1_Base_Pose_Sofa_Breathe;
@@ -3926,7 +3933,6 @@ RecentlyPlaced=/Game/Environment/Pictures/Models/SM_Frame_Devil.SM_Frame_Devil;/
 RecentlyPlaced=/Game/Environment/Pictures/Models/SM_Frame_Crow.SM_Frame_Crow;/Engine/Transient.EditorStaticMeshFactory_0
 RecentlyPlaced=/Game/Environment/Pictures/Models/SM_Frame_Tuna.SM_Frame_Tuna;/Engine/Transient.EditorStaticMeshFactory_0
 RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail.wrath_cocktail;
-RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/sloth_cocktail.sloth_cocktail;
 None=======
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
