--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -317,22 +317,22 @@ TemplateSequenceEditorSettings=EnhancedInputDeveloperSettings.Modifier Default V
 UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=
-SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList
+WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails
+SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
+CapsuleComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 SkeletalMesh=SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.Clothing.MeshClothingAssets,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
 SkeletalMesh=SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.Clothing.MeshClothingAssets,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
 LODInfoUILayout=
 LODInfoUILayout=
 BP_NPC_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
-BP_NPC_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision
+BP_NPC_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Normal,MaterialEditorInstanceConstant.ParameterGroups.Roughness
 MaterialInstanceConstant=
 MaterialInstanceConstant=
 BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
-BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+BrushComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 SkeletalMeshComponent=
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
@@ -467,7 +467,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Player
 ContentBrowserTab1.SelectedPaths=/Game/NPCs
 ContentBrowserTab1.SelectedPaths=/Game/Mini_Games/Pool
-ContentBrowserTab1.SelectedPaths=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 None=======
 None=======
@@ -511,7 +511,7 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Test_Level/ThirdPersonMap
+LastLevel=/Game/Maps/Main_Level/Main_Level
 
 [ModuleFileTracking]
 Project_7_Sins.TimeStamp=2025.03.22-16.28.40
@@ -1775,7 +1775,7 @@ AnimGraphNode_LookAt="\"Object\" "
 AnimGraphNode_SkeletalControlBase="\"Object\" "
 SkeletalMesh="\"Object\" \"Object.LODSettings.DisableBelowMinLodStripping\" \"Object.LODSettings.bSupportLODStreaming\" \"Object.LODSettings.MaxNumOptionalLODs\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 SkinnedAsset="\"Object\" \"Object.LODSettings.DisableBelowMinLodStripping\" \"Object.LODSettings.bSupportLODStreaming\" \"Object.LODSettings.MaxNumOptionalLODs\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-StreamableRenderAsset="\"Object\" "
+StreamableRenderAsset="\"Object\" \"Object.LODSettings.DisableBelowMinLodStripping\" \"Object.LODSettings.bSupportLODStreaming\" \"Object.LODSettings.MaxNumOptionalLODs\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 LODInfoUILayout="\"Object\" \"Object.LODInfo.BuildSettings\" \"Object.LODInfo.ReductionSettings\" "
 UserDefinedEnum="\"Object\" "
 Enum="\"Object\" "
@@ -1896,6 +1896,7 @@ ChildActorComponent="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=AnimationEditor
@@ -1922,8 +1923,7 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
+OpenAssetsAtExit=/Game/NPCs/Models/Zilia/Materials/MI_Rat.MI_Rat
 None=======
 None=======
 None=======
@@ -1945,34 +1945,33 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Environment/Posters/Models/poster1
-MRUItem1=/Game/Environment/Posters/Material/Posters
-MRUItem2=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_sleeping
-MRUItem3=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_meow
-MRUItem4=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_hiss
-MRUItem5=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_lying
-MRUItem6=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_base_pose
-MRUItem7=/Game/NPCs/Models/Dante_V3/Materials/MI_Tuna
-MRUItem8=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
-MRUItem9=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
-MRUItem10=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem11=/Game/NPCs/Models/Zilia/zilia
-MRUItem12=/Game/Player/BP_Player
-MRUItem13=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem14=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
-MRUItem15=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
-MRUItem16=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
-MRUItem17=/Game/Maps/Main_Level/Main_Level
-MRUItem18=/Game/Maps/Test_Level/ThirdPersonMap
-MRUItem19=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_63_to_player_and_Zilia
-MRUItem20=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia
-MRUItem21=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_69
-MRUItem22=/Game/Environment/Custom_Props/Materials/Plants
-MRUItem23=/Game/NPCs/Models/Zilia/Materials/MI_Zilia_dress
-MRUItem24=/Game/NPCs/Models/Biel/Textures/Body/Biel_Body_LP_Biel_Body_LP_UVs_lambert1SG_BaseColor
-MRUItem25=/Game/NPCs/Models/Biel/Materials/MI_Biel_Body
-MRUItem26=/Game/NPCs/Models/Biel/Materials/MI_Biel_Hair
-MRUItem27=/Game/Environment/Pictures/Textures/T_Prop_01_A
+MRUItem0=/Game/NPCs/Models/Zilia/Materials/MI_Rat
+MRUItem1=/Game/Environment/Posters/Models/poster1
+MRUItem2=/Game/Environment/Posters/Material/Posters
+MRUItem3=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_sleeping
+MRUItem4=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_meow
+MRUItem5=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_hiss
+MRUItem6=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_lying
+MRUItem7=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_base_pose
+MRUItem8=/Game/NPCs/Models/Dante_V3/Materials/MI_Tuna
+MRUItem9=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
+MRUItem10=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
+MRUItem11=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem12=/Game/NPCs/Models/Zilia/zilia
+MRUItem13=/Game/Player/BP_Player
+MRUItem14=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem15=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
+MRUItem16=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
+MRUItem17=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
+MRUItem18=/Game/Maps/Main_Level/Main_Level
+MRUItem19=/Game/Maps/Test_Level/ThirdPersonMap
+MRUItem20=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_63_to_player_and_Zilia
+MRUItem21=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia
+MRUItem22=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_69
+MRUItem23=/Game/Environment/Custom_Props/Materials/Plants
+MRUItem24=/Game/NPCs/Models/Zilia/Materials/MI_Zilia_dress
+MRUItem25=/Game/NPCs/Models/Biel/Textures/Body/Biel_Body_LP_Biel_Body_LP_UVs_lambert1SG_BaseColor
+MRUItem26=/Game/NPCs/Models/Biel/Materials/MI_Biel_Body
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3651,7 +3650,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/Mini_Games/Pool/BP_PoolBall.BP_PoolBall=1
@@ -3779,6 +3778,7 @@ None=======
 /Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_63_to_player_and_Zilia.Dante_63_to_player_and_Zilia=1
 /Game/NPCs/Models/Dante_V3/Materials/MI_Tuna.MI_Tuna=1
 /Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_sleeping.Tuna_sleeping=1
+/Game/NPCs/Models/Zilia/Materials/MI_Rat.MI_Rat=1
 
 [DetailCategoriesAdvanced]
 WorldSettings.PrecomputedVisibility=False
@@ -3915,6 +3915,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/idle_rat_Anim.idle_rat_Anim;
 RecentlyPlaced=/Game/NPCs/Animations/Assets/Zilia/Other/zilia_pose_legCross.zilia_pose_legCross;
 RecentlyPlaced=/Game/NPCs/Models/Zilia/zilia.zilia;
 RecentlyPlaced=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_1_Base_Pose_Sofa_Breathe.Biel_Idle_1_Base_Pose_Sofa_Breathe;
@@ -3934,7 +3935,6 @@ RecentlyPlaced=/Game/Environment/Pictures/Models/SM_Frame_Devil.SM_Frame_Devil;/
 RecentlyPlaced=/Game/Environment/Pictures/Models/SM_Frame_Crow.SM_Frame_Crow;/Engine/Transient.EditorStaticMeshFactory_0
 RecentlyPlaced=/Game/Environment/Pictures/Models/SM_Frame_Tuna.SM_Frame_Tuna;/Engine/Transient.EditorStaticMeshFactory_0
 RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail.wrath_cocktail;
-RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/sloth_cocktail.sloth_cocktail;
 None=======
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
@@ -3996,7 +3996,7 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
@@ -4167,19 +4167,19 @@ PrimType=1
 [RootWindow]
 ScreenPosition=X=278.000 Y=34.000
 ScreenPosition=X=313.000 Y=62.000
-ScreenPosition=X=11.200 Y=0.000
+ScreenPosition=X=32.800 Y=7.200
 None=======
 None=======
 WindowSize=X=1287.000 Y=909.000
-WindowSize=X=1296.000 Y=916.800
-InitiallyMaximized=True
+WindowSize=X=1297.600 Y=918.400
+InitiallyMaximized=False
 
 [Directories2]
 UNR=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/Maps/Main_Level
 BRUSH=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
 FBX=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
 FBXAnim=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
-GenericImport=../../../../Users/ASUS/Documents/7Sins/Tuna/tuna_export_UE.fbx
+GenericImport=../../../../Users/ASUS/Downloads/rat-test-free/textures/texture_0_6195987693227547908.png
 GenericExport=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
 GenericOpen=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
 GenericSave=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
@@ -4201,7 +4201,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
