--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -348,13 +348,13 @@ AudioComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.Def
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 SceneComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 SceneComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
-ABP_NPC_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+ABP_NPC_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 K2Node_Variable=
 MulticastInlineDelegatePropertyWrapper=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 ToolMenu=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
-K2Node=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
+K2Node=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 EdGraph=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 SplineComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
@@ -1601,7 +1601,7 @@ ExternalImagePicker.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1899,6 +1899,14 @@ ABP_Rat_C="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=SoundCueEditor
+RecentAssetEditors=SoundCueEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
@@ -1915,14 +1923,6 @@ RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1932,6 +1932,8 @@ RecentAssetEditors=
 OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
 OpenAssetsAtExit=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton.Dante_V2_Skeleton
 OpenAssetsAtExit=/Game/NPCs/Models/Zilia/zilia.zilia
+OpenAssetsAtExit=/Game/NPCs/Dialogue_Specific/DT_Dialogue.DT_Dialogue
+OpenAssetsAtExit=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC.ABP_NPC
 None=======
 None=======
 None=======
@@ -1953,36 +1955,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/Models/Zilia/zilia
-MRUItem1=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
-MRUItem2=/Game/NPCs/BP_NPC
-MRUItem3=/Game/Misc_Mechanics/Rat/ABP_Rat
-MRUItem4=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
-MRUItem5=/Game/NPCs/Models/Zilia/Materials/MI_Rat
-MRUItem6=/Game/Environment/Posters/Models/poster1
-MRUItem7=/Game/Environment/Posters/Material/Posters
-MRUItem8=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_sleeping
-MRUItem9=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_meow
-MRUItem10=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_hiss
-MRUItem11=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_lying
-MRUItem12=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_base_pose
-MRUItem13=/Game/NPCs/Models/Dante_V3/Materials/MI_Tuna
-MRUItem14=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
-MRUItem15=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
-MRUItem16=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem17=/Game/Player/BP_Player
-MRUItem18=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem19=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
-MRUItem20=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
-MRUItem21=/Game/Maps/Main_Level/Main_Level
-MRUItem22=/Game/Maps/Test_Level/ThirdPersonMap
-MRUItem23=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_63_to_player_and_Zilia
-MRUItem24=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia
-MRUItem25=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_69
-MRUItem26=/Game/Environment/Custom_Props/Materials/Plants
-MRUItem27=/Game/NPCs/Models/Zilia/Materials/MI_Zilia_dress
-MRUItem28=/Game/NPCs/Models/Biel/Textures/Body/Biel_Body_LP_Biel_Body_LP_UVs_lambert1SG_BaseColor
-MRUItem29=/Game/NPCs/Models/Biel/Materials/MI_Biel_Body
+MRUItem0=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_91
+MRUItem1=/Game/SFX/Dialogue/Dante/In_game_lines/Gets_Caught/Dante_133_Cue
+MRUItem2=/Game/SFX/Dialogue/Dante/In_game_lines/Gets_Caught/Dante_129_Cue
+MRUItem3=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_129
+MRUItem4=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_133
+MRUItem5=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem6=/Game/NPCs/Dialogue_Specific/DT_Dialogue
+MRUItem7=/Game/NPCs/Models/Zilia/zilia
+MRUItem8=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
+MRUItem9=/Game/NPCs/BP_NPC
+MRUItem10=/Game/Misc_Mechanics/Rat/ABP_Rat
+MRUItem11=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
+MRUItem12=/Game/NPCs/Models/Zilia/Materials/MI_Rat
+MRUItem13=/Game/Environment/Posters/Models/poster1
+MRUItem14=/Game/Environment/Posters/Material/Posters
+MRUItem15=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_sleeping
+MRUItem16=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_meow
+MRUItem17=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_hiss
+MRUItem18=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_lying
+MRUItem19=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_base_pose
+MRUItem20=/Game/NPCs/Models/Dante_V3/Materials/MI_Tuna
+MRUItem21=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
+MRUItem22=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
+MRUItem23=/Game/Player/BP_Player
+MRUItem24=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem25=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
+MRUItem26=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
+MRUItem27=/Game/Maps/Main_Level/Main_Level
+MRUItem28=/Game/Maps/Test_Level/ThirdPersonMap
+MRUItem29=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_63_to_player_and_Zilia
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3805,6 +3807,11 @@ None=======
 /Game/Misc_Mechanics/Rat/rat_rig_DEADPACKAGE_3.rat_rig=1
 /Game/Misc_Mechanics/Rat/rat_rig.rat_rig=1
 /Game/Misc_Mechanics/Rat/ABP_Rat.ABP_Rat=1
+/Game/SFX/Dialogue/Dante/In_game_lines/Gets_Caught/Dante_129_Cue.Dante_129_Cue=1
+/Game/SFX/Dialogue/Dante/In_game_lines/Gets_Caught/Dante_133_Cue.Dante_133_Cue=1
+/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_133.Dante_133=1
+/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_129.Dante_129=1
+/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_91.Dante_91=1
 
 [DetailCategoriesAdvanced]
 WorldSettings.PrecomputedVisibility=False
