--- a/Project_7_Sins/Saved/Config/ConsoleHistory.ini
+++ b/Project_7_Sins/Saved/Config/ConsoleHistory.ini
@@ -2,4 +2,5 @@
 History=" r.Streaming.PoolSize 7000"
 History=r.Streaming.PoolSize 6000
 History=r.Streaming.PoolSize 8000
+History=r.Streaming.PoolSize 7000
 
