--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -384,7 +384,7 @@ BP_Character_Position_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_Variab
 BP_Character_Position_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList
 Actor=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 Actor=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
-DecalActor=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
+DecalActor=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 MeshComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 BP_Dart_Board_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 BP_Player_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
@@ -483,7 +483,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Environment/Pictures/Textures
+ContentBrowserDrawer.SelectedPaths=/Game/Environment/Street_Assets/Materials/graffiti_decals
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -498,7 +498,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Player
 ContentBrowserTab1.SelectedPaths=/Game/NPCs
 ContentBrowserTab1.SelectedPaths=/Game/Mini_Games/Pool
 ContentBrowserTab1.SelectedPaths=/Game/SFX/FX
-ContentBrowserTab1.SelectedPaths=/Game/NPCs/Models/Zilia
+ContentBrowserTab1.SelectedPaths=/Game/Environment/Street_Assets/Textures/graffiti
 None=======
 None=======
 None=======
@@ -1973,14 +1973,14 @@ UVEditorUVTransformPropertiesBase="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -2011,6 +2011,14 @@ None=======
 None=======
 None=======
 None=======
+OpenAssetsAtExit=/Game/Environment/Street_Assets/Materials/graffiti_decals/Harry_Ben.Harry_Ben
+OpenAssetsAtExit=/Game/Environment/Street_Assets/Materials/graffiti_decals/Yurii_Martyn.Yurii_Martyn
+OpenAssetsAtExit=/Game/Environment/Street_Assets/Materials/graffiti_decals/Charli.Charli
+OpenAssetsAtExit=/Game/Environment/Street_Assets/Materials/graffiti_decals/Jess.Jess
+OpenAssetsAtExit=/Game/Environment/Street_Assets/Materials/graffiti_decals/Tino.Tino
+OpenAssetsAtExit=/Game/Environment/Street_Assets/Materials/graffiti_decals/Ryn.Ryn
+OpenAssetsAtExit=/Game/Environment/Street_Assets/Materials/graffiti_decals/gojo.gojo
+OpenAssetsAtExit=/Game/Environment/Street_Assets/Materials/graffiti_decals/cramie.cramie
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2026,36 +2034,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Environment/Pictures/Models/SM_Frame_Map
-MRUItem1=/Game/Environment/Pictures/Models/SM_Frame_Crow
-MRUItem2=/Game/Environment/Pictures/Materials/Pictures
-MRUItem3=/Game/Environment/Posters/Models/poster13
-MRUItem4=/Game/Environment/Posters/Material/Posters
-MRUItem5=/Game/Environment/Posters/Models/poster12
-MRUItem6=/Game/Environment/Posters/Models/poster11
-MRUItem7=/Game/Environment/Posters/Models/poster9
-MRUItem8=/Game/Environment/Posters/Models/poster8
-MRUItem9=/Game/Environment/Posters/Models/poster4
-MRUItem10=/Game/Environment/Posters/Models/poster3
-MRUItem11=/Game/Environment/Posters/Models/poster2
-MRUItem12=/Game/Environment/Posters/Models/poster1
-MRUItem13=/Game/Environment/Posters/Models/poster7
-MRUItem14=/Game/Environment/Posters/Models/poster5
-MRUItem15=/Game/NPCs/Dialogue_Specific/DT_Dialogue
-MRUItem16=/Game/Shared_Game_Mechanics/Cards/Card_Piles/BP_CardPile_IDI_Doubted
-MRUItem17=/Game/NPCs/Animations/BP_End_Conversation
-MRUItem18=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem19=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager
-MRUItem20=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem21=/Game/SFX/FX/4_Card_movement/Cards_Shuffle_Cue
-MRUItem22=/Game/SFX/FX/4_Card_movement/Card_Move_Cue
-MRUItem23=/Game/SFX/Foley/Steps/P1/Step_Normal_Cue
-MRUItem24=/Game/SFX/FX/10_footstep_sounds/High_Heels/Wood/High_Heel_Wood_Cue
-MRUItem25=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem26=/Game/NPCs/BP_NPC
-MRUItem27=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Start_Game
-MRUItem28=/Game/Maps/Main_Level/Main_Level
-MRUItem29=/Game/Mini_Games/Pool/BP_Pool_Game_Manager
+MRUItem0=/Game/Environment/Street_Assets/Materials/graffiti_decals/cramie
+MRUItem1=/Game/Environment/Street_Assets/Materials/graffiti_decals/gojo
+MRUItem2=/Game/Environment/Street_Assets/Materials/graffiti_decals/Ryn
+MRUItem3=/Game/Environment/Street_Assets/Materials/graffiti_decals/Tino
+MRUItem4=/Game/Environment/Street_Assets/Materials/graffiti_decals/Jess
+MRUItem5=/Game/Environment/Street_Assets/Materials/graffiti_decals/Charli
+MRUItem6=/Game/Environment/Street_Assets/Materials/graffiti_decals/Yurii_Martyn
+MRUItem7=/Game/Environment/Street_Assets/Materials/graffiti_decals/Harry_Ben
+MRUItem8=/Game/Environment/Pictures/Models/SM_Frame_Map
+MRUItem9=/Game/Environment/Pictures/Models/SM_Frame_Crow
+MRUItem10=/Game/Environment/Pictures/Materials/Pictures
+MRUItem11=/Game/Environment/Posters/Models/poster13
+MRUItem12=/Game/Environment/Posters/Material/Posters
+MRUItem13=/Game/Environment/Posters/Models/poster12
+MRUItem14=/Game/Environment/Posters/Models/poster11
+MRUItem15=/Game/Environment/Posters/Models/poster9
+MRUItem16=/Game/Environment/Posters/Models/poster8
+MRUItem17=/Game/Environment/Posters/Models/poster4
+MRUItem18=/Game/Environment/Posters/Models/poster3
+MRUItem19=/Game/Environment/Posters/Models/poster2
+MRUItem20=/Game/Environment/Posters/Models/poster1
+MRUItem21=/Game/Environment/Posters/Models/poster7
+MRUItem22=/Game/Environment/Posters/Models/poster5
+MRUItem23=/Game/NPCs/Dialogue_Specific/DT_Dialogue
+MRUItem24=/Game/Shared_Game_Mechanics/Cards/Card_Piles/BP_CardPile_IDI_Doubted
+MRUItem25=/Game/NPCs/Animations/BP_End_Conversation
+MRUItem26=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem27=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager
+MRUItem28=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem29=/Game/SFX/FX/4_Card_movement/Cards_Shuffle_Cue
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -4269,6 +4277,14 @@ None=======
 /Game/Environment/Pictures/Materials/Pictures.Pictures=1
 /Game/Environment/Pictures/Models/SM_Frame_KQ.SM_Frame_KQ=1
 /Game/Environment/Pictures/Models/SM_Frame_Jack.SM_Frame_Jack=1
+/Game/Environment/Street_Assets/Materials/graffiti_decals/Harry_Ben.Harry_Ben=1
+/Game/Environment/Street_Assets/Materials/graffiti_decals/Yurii_Martyn.Yurii_Martyn=1
+/Game/Environment/Street_Assets/Materials/graffiti_decals/Charli.Charli=1
+/Game/Environment/Street_Assets/Materials/graffiti_decals/Jess.Jess=1
+/Game/Environment/Street_Assets/Materials/graffiti_decals/Tino.Tino=1
+/Game/Environment/Street_Assets/Materials/graffiti_decals/Ryn.Ryn=1
+/Game/Environment/Street_Assets/Materials/graffiti_decals/gojo.gojo=1
+/Game/Environment/Street_Assets/Materials/graffiti_decals/cramie.cramie=1
 
 [DetailCategoriesAdvanced]
 WorldSettings.PrecomputedVisibility=False
@@ -4409,6 +4425,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Environment/Street_Assets/Materials/graffiti_decals/Yurii_Martyn.Yurii_Martyn;
 RecentlyPlaced=/Game/Environment/Pictures/Models/SM_Frame_KQ.SM_Frame_KQ;
 RecentlyPlaced=/Game/Environment/Pictures/Models/SM_Frame_Jack.SM_Frame_Jack;
 RecentlyPlaced=/Game/Environment/Pictures/Models/SM_Frame_HellHeaven.SM_Frame_HellHeaven;
@@ -4428,7 +4445,6 @@ RecentlyPlaced=/Game/Environment/Posters/Models/poster7.poster7;
 RecentlyPlaced=/Game/Environment/Posters/Models/poster6.poster6;
 RecentlyPlaced=/Game/Environment/Posters/Models/poster3.poster3;
 RecentlyPlaced=/Game/Environment/Posters/Models/poster2.poster2;
-RecentlyPlaced=/Game/SFX/FX/23_Street_sound/Street_101.Street_101;
 None=======
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
@@ -4488,11 +4504,12 @@ bEnableWorldPartitionActorFilters=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
-PrimType=1
+PrimType=2
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=0
@@ -4656,7 +4673,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialEditor]
-PrimType=1
+PrimType=2
 
 [RootWindow]
 ScreenPosition=X=278.000 Y=34.000
@@ -4671,7 +4688,7 @@ None=======
 WindowSize=X=1287.000 Y=909.000
 WindowSize=X=1306.000 Y=927.000
 WindowSize=X=1287.000 Y=909.000
-WindowSize=X=1390.400 Y=932.800
+WindowSize=X=1392.000 Y=934.400
 InitiallyMaximized=True
 
 [Directories2]
